minor fix to dark mode

--- a/style.css
+++ b/style.css
@@ -18,6 +18,10 @@ header {
     justify-content: space-evenly
 }
 
+#darkMode {
+    width: 200px;
+}
+
 p {
     display: flex;
 }
